[project]
name = "v2raypy"
version = "1.0.0"
description = "A Python library to handle and parse v2ray links"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Sina Rahimi", email = "sina.rahimi.8125@gmail.com" }
]

dependencies = [
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["v2ray"]
