[project]
name = "v2raypy"
version = "1.1.0"
description = "A Python library to handle and parse v2ray links"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Sina Rahimi", email = "sina.rahimi.8125@gmail.com" }
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/sina8125/v2raypy"
Documentation = "https://github.com/sina8125/v2raypy#readme"
Repository = "https://github.com/sina8125/v2raypy"
"Bug Tracker" = "https://github.com/sina8125/v2raypy/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["v2ray"]
